remove allow list check

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -73,7 +73,7 @@ jobs:
           path: .
 
       - name: Check for cross app imports in allowlist apps
-        run: yarn check-app-imports --check-allowlist --fail-on-cross-app-import
+        run: yarn check-app-imports --fail-on-cross-app-import
         env:
           TEST_TYPE: unit_test
 
