--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
   "devDependencies": {
     "@actions/core": "^1.9.1",
     "@axe-core/react": "^4.10.0",
+    "@babel/cli": "^7.25.9",
     "@babel/core": "^7.26.0",
     "@babel/eslint-parser": "^7.25.9",
     "@babel/parser": "^7.26.2",
@@ -118,6 +119,7 @@
     "@babel/plugin-proposal-numeric-separator": "^7.18.6",
     "@babel/plugin-proposal-optional-chaining": "^7.18.6",
     "@babel/plugin-proposal-throw-expressions": "^7.18.6",
+    "@babel/plugin-transform-class-properties": "^7.25.9",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-syntax-import-meta": "^7.10.4",
     "@babel/preset-env": "^7.26.0",
