--- a/package.json
+++ b/package.json
@@ -306,7 +306,7 @@
     "octokit": "^2.1.0",
     "octokit-plugin-create-pull-request": "^3.11.0",
     "prop-types": "^15.6.1",
-    "querystring-es3": "^0.2.1",
+    "querystring": "^0.2.1",
     "react": "^17.0.2",
     "react-device-detect": "^2.2.3",
     "react-dom": "^17.0.2",
