--- a/package.json
+++ b/package.json
@@ -245,7 +245,7 @@
     "webpack": "^5.91.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.4",
+    "webpack-dev-server": "^4.8.0",
     "webpack-manifest-plugin": "^4.0.2",
     "webpackbar": "^5.0.2",
     "yeoman-generator": "^5.6.1",
@@ -293,6 +293,7 @@
     "i18next-browser-languagedetector": "^6.1.3",
     "ics-js": "^0.10.2",
     "js-cookie": "^2.2.1",
+    "jsdom": "^25.0.1",
     "jsonschema": "^1.4.0",
     "leaflet": "^1.7.1",
     "local-storage-fallback": "^4.1.2",
