--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -1320,6 +1320,13 @@ jobs:
         run: |
           node script/github-actions/merge-unit-test-coverage.js $(find qa-standards-dashboard-data/coverage -name '*.json')
 
+      - name: Archive merged coverage reports
+        if: ${{ always() }}
+        uses: ./.github/workflows/upload-artifact
+        with:
+          name: merged-coverage-report
+          path: ../merged-coverage-report.json
+
       - name: Generate coverage report by app
         run: node script/app-coverage-report.js > qa-standards-dashboard-data/coverage/coverage_report.txt
 
