--- a/.github/workflows/download-artifact/action.yml
+++ b/.github/workflows/download-artifact/action.yml
@@ -23,7 +23,7 @@ inputs:
 runs:
   using: composite
   steps:
-    - uses: actions/download-artifact@v4
+    - uses: actions/download-artifact@c850b930e6ba138125429b7e5c93fc707a7f8427
       with:
         name: ${{ inputs.name }}
         path: ${{ inputs.path }}
