--- a/package.json
+++ b/package.json
@@ -253,8 +253,7 @@
   },
   "optionalDependencies": {},
   "engines": {
-    "node": ">=18",
-    "yarn": "1.19.1"
+    "node": ">=18"
   },
   "private": true,
   "dependencies": {
@@ -303,6 +302,7 @@
     "moment": "~2.29.4",
     "moment-timezone": "^0.5.35",
     "node-lcs": "^1.0.4",
+    "node-polyfill-webpack-plugin": "^4.0.0",
     "octokit": "^2.1.0",
     "octokit-plugin-create-pull-request": "^3.11.0",
     "prop-types": "^15.6.1",
@@ -378,7 +378,8 @@
     "**/minimist": "^1.2.6",
     "**/async": "^2.6.4",
     "**/ejs": "^3.1.7",
-    "**/fbjs": "^3.0.4"
+    "**/fbjs": "^3.0.4",
+    "**/jsdom/tough-cookie": "4.1.4"
   },
   "workspaces": {
     "packages": [
