updates yarn to 4.5.1

--- a/src/platform/forms/package.json
+++ b/src/platform/forms/package.json
@@ -2,11 +2,11 @@
   "name": "@department-of-veterans-affairs/platform-forms",
   "version": "1.0.0",
   "scripts": {
-    "demo":"echo DEMOING $npm_package_name v $npm_package_version with WORKSPACES"
+    "demo": "echo DEMOING $npm_package_name v $npm_package_version with WORKSPACES"
   },
   "exports": {
-    "." :"./exportsFile.js",
-    "./labels" : "./address/data/labels.js",
+    ".": "./exportsFile.js",
+    "./labels": "./address/data/labels.js",
     "./addressHelpers": "./address/helpers.js",
     "./address": "./address/index.js",
     "./validations": "./validations.js",
@@ -48,28 +48,28 @@
   "license": "MIT",
   "private": true,
   "peerDependencies": {
-    "vets-json-schema": "*",
-    "react": "*",
-    "react-redux": "*",
-    "react-router": "*",
     "@department-of-veterans-affairs/component-library": "*",
-    "prop-types": "*",
-    "reselect": "*",
-    "lodash": "*",
-    "formik": "*",
+    "@department-of-veterans-affairs/react-jsonschema-form": "*",
+    "@sentry/browser": "*",
     "@testing-library/react": "*",
     "@testing-library/user-event": "*",
+    "chai": "*",
+    "classnames": "*",
     "date-fns": "*",
     "date-fns-tz": "*",
-    "classnames": "*",
-    "react-scroll": "*",
-    "react-dom": "*",
-    "@department-of-veterans-affairs/react-jsonschema-form": "*",
+    "enzyme": "*",
+    "formik": "*",
+    "lodash": "*",
     "moment": "*",
-    "skin-deep": "*",
-    "@sentry/browser": "*", 
-    "chai": "*", 
+    "prop-types": "*",
+    "react": "*",
+    "react-dom": "*",
+    "react-redux": "*",
+    "react-router": "*",
+    "react-scroll": "*",
+    "reselect": "*",
     "sinon": "*",
-    "enzyme": "*"
+    "skin-deep": "*",
+    "vets-json-schema": "*"
   }
 }
