--- a/src/platform/user/package.json
+++ b/src/platform/user/package.json
@@ -43,27 +43,27 @@
     "local": "node demo-script/local-demo.js"
   },
   "peerDependencies": {
-    "react": "*",
-    "prop-types": "*",
+    "@department-of-veterans-affairs/component-library": "*",
+    "@sentry/browser": "*",
+    "@testing-library/react": "*",
+    "append-query": "*",
+    "axe-core": "*",
+    "camelcase-keys-recursive": "*",
+    "chai": "*",
     "classnames": "*",
+    "date-fns": "*",
+    "enzyme": "*",
+    "prop-types": "*",
+    "react": "*",
+    "react-dom": "*",
     "react-redux": "*",
     "react-router": "*",
-    "react-dom": "*",
-    "date-fns": "*",
-    "camelcase-keys-recursive": "*",
-    "url-search-params": "*",
-    "@department-of-veterans-affairs/component-library": "*",
     "react-router-dom": "*",
     "redux": "*",
-    "url-search-params-polyfill": "*",
-    "@sentry/browser": "*",
-    "axe-core": "*",
-    "enzyme": "*",
-    "chai": "*",
     "sinon": "*",
     "skin-deep": "*",
-    "@testing-library/react": "*",
-    "append-query": "*"
+    "url-search-params": "*",
+    "url-search-params-polyfill": "*"
   },
   "license": "MIT",
   "private": true
