--- a/package.json
+++ b/package.json
@@ -251,7 +251,6 @@
     "yeoman-generator": "^5.6.1",
     "yo": "4.3.1"
   },
-  "optionalDependencies": {},
   "engines": {
     "node": ">=18",
     "yarn": "1.19.1"
@@ -337,48 +336,8 @@
     "vets-json-schema": "https://github.com/department-of-veterans-affairs/vets-json-schema.git#71c4501d45b75000818c88707c9c0ecd3dc86dc7"
   },
   "resolutions": {
-    "**/lodash": "4.17.21",
-    "**/nanoid": "^3.1.31",
-    "**/js-yaml": "^3.13.1",
-    "**/jpeg-js": "^0.4.3",
-    "**/dot-prop": "^5.1.1",
-    "**/dns-packet": "^1.3.2",
-    "**/growl": "^1.10.2",
-    "**/handlebars": "^4.7.7",
-    "**/http-proxy": "^1.18.1",
-    "**/https-proxy-agent": "^2.2.3",
-    "**/hosted-git-info": "^3.0.8",
-    "**/locutus": "^2.0.15",
-    "**/node-forge": "^1.3.0",
-    "**/normalize-url": "^6.0.1",
-    "**/qs": "^6.0.4",
-    "**/axios": "^0.21.1",
-    "**/elliptic": "^6.5.4",
-    "**/minimatch": "^3.0.2",
-    "**/netmask": "^2.0.1",
-    "**/is-svg": "^4.2.2",
-    "**/y18n": "^4.0.1",
-    "**/merge": "^2.1.1",
-    "**/shelljs": "^0.8.5",
-    "**/ssri": "^8.0.1",
-    "**/ua-parser-js": "^0.7.24",
-    "**/underscore": "^1.12.1",
-    "**/url-parse": "^1.5.0",
-    "tar-fs/tar-stream/bl": "^4.0.3",
-    "**/meow": "^9.0.0",
-    "**/set-value": "^2.0.1",
-    "**/tar": "^4.4.18",
-    "**/kind-of": "^6.0.3",
-    "**/glob-parent": "^5.1.2",
-    "**/ansi-regex": "^5.0.1",
-    "**/yargs-parser": "13.1.2",
     "@babel/runtime": "^7.15.4",
-    "punycode": "1.4.1",
-    "**/cached-path-relative": "1.1.0",
-    "**/minimist": "^1.2.6",
-    "**/async": "^2.6.4",
-    "**/ejs": "^3.1.7",
-    "**/fbjs": "^3.0.4"
+    "punycode": "1.4.1"
   },
   "workspaces": {
     "packages": [
@@ -440,5 +399,5 @@
       "**/platform-testing/winston"
     ]
   },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+  "packageManager": "yarn@4.5.1"
 }
