--- a/src/platform/polyfills/package.json
+++ b/src/platform/polyfills/package.json
@@ -2,28 +2,28 @@
   "name": "@department-of-veterans-affairs/platform-polyfills",
   "version": "1.0.0",
   "scripts": {
-    "demo":"echo DEMOING $npm_package_name v $npm_package_version with WORKSPACES"
+    "demo": "echo DEMOING $npm_package_name v $npm_package_version with WORKSPACES"
   },
   "exports": {
-    "." :"./exportsFile.js",
-    "./index" :"./index.js",
-    "./canvasToBlob" :"./canvasToBlob.js",
-    "./downloadAttribute" :"./downloadAttribute.js",
-    "./polyfillTimezoneData" :"./polyfillTimezoneData.js",
-    "./preESModulesPolyfills" :"./preESModulesPolyfills.js"
+    ".": "./exportsFile.js",
+    "./index": "./index.js",
+    "./canvasToBlob": "./canvasToBlob.js",
+    "./downloadAttribute": "./downloadAttribute.js",
+    "./polyfillTimezoneData": "./polyfillTimezoneData.js",
+    "./preESModulesPolyfills": "./preESModulesPolyfills.js"
   },
   "dependencies": {
     "@formatjs/intl-datetimeformat": "^4.2.3",
     "@formatjs/intl-getcanonicallocales": "^1.7.3",
     "@formatjs/intl-locale": "^2.4.37",
     "classlist-polyfill": "^1.2.0",
-    "element-remove": "^1.0.4",
     "downloadjs": "^1.4.7",
+    "element-remove": "^1.0.4",
     "whatwg-fetch": "^3.6.2"
   },
   "peerDependencies": {
-    "regenerator-runtime": "*",
-    "core-js": "*"
+    "core-js": "*",
+    "regenerator-runtime": "*"
   },
   "license": "MIT",
   "private": true
