--- a/src/platform/site-wide/package.json
+++ b/src/platform/site-wide/package.json
@@ -2,69 +2,69 @@
     "name": "@department-of-veterans-affairs/platform-site-wide",
     "version": "1.0.0",
     "scripts": {
-      "demo":"echo DEMOING $npm_package_name v $npm_package_version with WORKSPACES"
+        "demo": "echo DEMOING $npm_package_name v $npm_package_version with WORKSPACES"
     },
     "exports": {
-      "." :"./exportsFile.js",
-      "./showVaAlertExpandable": "./alerts/showVaAlertExpandable.js",
-      "./MobileAppCallout": "./alerts/MobileAppCallout.jsx",
-      "./EbenefitsLink": "./ebenefits/containers/EbenefitsLink.jsx",
-      "./selectors": "./feature-toggles/selectors.js",
-      "./actionTypes": "./feature-toggles/actionTypes.js",
-      "./feature-toggles/reducers": "./feature-toggles/reducers/index.js",
-      "./header": "./header/index.js",
-      "./static-drupal-data": "./hooks/static-drupal-data.js",
-      "./menu": "./legacy/menu.js",
-      "./legacy/mega-menu": "./legacy/mega-menu.js",
-      "./LoadingButton": "./loading-button/LoadingButton.jsx",
-      "./mega-menu": "./mega-menu/index.js",
-      "./reducers": "./mega-menu/reducers/index.js",
-      "./utilities": "./mhv/utilities.js",
-      "./mobile-menu-button": "./mobile-menu-button/index.js",
-      "./style": "./sass/style.scss",
-      "./va-medallia-style": "./sass/va-medallia-style.scss",
-      "./m-overrides": "./sass/modules/m-overrides.scss",
-      "./m-header": "./sass/modules/m-header.scss",
-      "./m-footer": "./sass/modules/m-footer.scss",
-      "./m-downtime-notification": "./sass/modules/m-downtime-notification.scss",
-      "./m-layers": "./sass/modules/m-layers.scss",
-      "./sitemap-helpers": "./tests/sitemap/sitemap-helpers.js",
-      "./actions": "./user-nav/actions/index.js",
-      "./AutoSSO": "./user-nav/containers/AutoSSO.jsx",
-      "./PageNotFound": "./user-nav/components/PageNotFound.jsx",
-      "./user-nav": "./user-nav/index.js",
-      "./sass/user-nav": "./user-nav/sass/user-nav.scss",
-      "./user-nav/reducers": "./user-nav/reducers/index.js",
-      "./va-footer": "./va-footer/index.js",
-      "./wizard": "./wizard/index.js",
-      "./accessible-VCL-modal": "./accessible-VCL-modal.js",
-      "./main": "./index.js",
-      "./moment-setup": "./moment-setup.js",
-      "./wc-loader": "./wc-loader.js"
+        ".": "./exportsFile.js",
+        "./showVaAlertExpandable": "./alerts/showVaAlertExpandable.js",
+        "./MobileAppCallout": "./alerts/MobileAppCallout.jsx",
+        "./EbenefitsLink": "./ebenefits/containers/EbenefitsLink.jsx",
+        "./selectors": "./feature-toggles/selectors.js",
+        "./actionTypes": "./feature-toggles/actionTypes.js",
+        "./feature-toggles/reducers": "./feature-toggles/reducers/index.js",
+        "./header": "./header/index.js",
+        "./static-drupal-data": "./hooks/static-drupal-data.js",
+        "./menu": "./legacy/menu.js",
+        "./legacy/mega-menu": "./legacy/mega-menu.js",
+        "./LoadingButton": "./loading-button/LoadingButton.jsx",
+        "./mega-menu": "./mega-menu/index.js",
+        "./reducers": "./mega-menu/reducers/index.js",
+        "./utilities": "./mhv/utilities.js",
+        "./mobile-menu-button": "./mobile-menu-button/index.js",
+        "./style": "./sass/style.scss",
+        "./va-medallia-style": "./sass/va-medallia-style.scss",
+        "./m-overrides": "./sass/modules/m-overrides.scss",
+        "./m-header": "./sass/modules/m-header.scss",
+        "./m-footer": "./sass/modules/m-footer.scss",
+        "./m-downtime-notification": "./sass/modules/m-downtime-notification.scss",
+        "./m-layers": "./sass/modules/m-layers.scss",
+        "./sitemap-helpers": "./tests/sitemap/sitemap-helpers.js",
+        "./actions": "./user-nav/actions/index.js",
+        "./AutoSSO": "./user-nav/containers/AutoSSO.jsx",
+        "./PageNotFound": "./user-nav/components/PageNotFound.jsx",
+        "./user-nav": "./user-nav/index.js",
+        "./sass/user-nav": "./user-nav/sass/user-nav.scss",
+        "./user-nav/reducers": "./user-nav/reducers/index.js",
+        "./va-footer": "./va-footer/index.js",
+        "./wizard": "./wizard/index.js",
+        "./accessible-VCL-modal": "./accessible-VCL-modal.js",
+        "./main": "./index.js",
+        "./moment-setup": "./moment-setup.js",
+        "./wc-loader": "./wc-loader.js"
     },
     "peerDependencies": {
-      "react": "*",
-      "@department-of-veterans-affairs/component-library": "*",
-      "url-search-params": "*",
-      "react-redux": "*",
-      "prop-types": "*",
-      "chai": "*",
-      "enzyme": "*",
-      "sinon": "*",
-      "moment": "*",
-      "date-fns": "*",
-      "@sentry/browser": "*",
-      "lodash": "*",
-      "react-dom": "*",
-      "@testing-library/user-event": "*",
-      "classnames": "*",
-      "node-fetch": "*",
-      "libxmljs": "*",
-      "append-query": "*",
-      "reselect": "*",
-      "@department-of-veterans-affairs/formation": "*",
-      "core-js": "*"
+        "@department-of-veterans-affairs/component-library": "*",
+        "@department-of-veterans-affairs/formation": "*",
+        "@sentry/browser": "*",
+        "@testing-library/user-event": "*",
+        "append-query": "*",
+        "chai": "*",
+        "classnames": "*",
+        "core-js": "*",
+        "date-fns": "*",
+        "enzyme": "*",
+        "libxmljs": "*",
+        "lodash": "*",
+        "moment": "*",
+        "node-fetch": "*",
+        "prop-types": "*",
+        "react": "*",
+        "react-dom": "*",
+        "react-redux": "*",
+        "reselect": "*",
+        "sinon": "*",
+        "url-search-params": "*"
     },
     "license": "MIT",
     "private": true
-  }
+}
