updated name of app/claims-status/package.json and added to the nohoist in the workspaces

--- a/src/applications/claims-status/package.json
+++ b/src/applications/claims-status/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@department-of-veterans-affairs/claims-status",
+    "name": "applications-claims-status",
     "version": "1.0.0",
     "description": "Dependencies for claims-status tool. Specifically, component library is pinned to 43.0.2 to ensure v1 of the file input component can still be used while the team works on migrating to mulitple file input. For now, please refrain from bumping the component library version in this dependeny list.",
     "scripts": {
