Add new vfs-benefits-conditions-team as codeowner

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -259,6 +259,7 @@ src/applications/dhp-connected-devices @department-of-veterans-affairs/digital-h
 src/applications/pre-need @department-of-veterans-affairs/bah-mbs-selfserv @department-of-veterans-affairs/va-platform-cop-frontend
 src/applications/pre-need-integration @department-of-veterans-affairs/bah-mbs-selfserv @department-of-veterans-affairs/va-platform-cop-frontend
 src/applications/static-pages/widget-creators @department-of-veterans-affairs/va-platform-cop-frontend
+src/applications/user-testing/new-conditions @department-of-veterans-affairs/vfs-benefits-conditions-team @department-of-veterans-affairs/va-platform-cop-frontend
 
 
 # Need more specific owners
