--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -244,6 +244,10 @@ src/applications/static-pages/health-care-manage-benefits/schedule-view-va-appoi
 # Benefits Accredited Representative Facing (ARF)
 src/applications/accredited-representative-portal @department-of-veterans-affairs/benefits-accredited-rep-facing-engineers @department-of-veterans-affairs/va-platform-cop-frontend
 
+# Accredited Representation Management (ARM)
+src/applications/representative-appoint @department-of-veterans-affairs/accredited-representation-management @department-of-veterans-affairs/va-platform-cop-frontend
+src/applications/representative-search @department-of-veterans-affairs/accredited-representation-management @department-of-veterans-affairs/va-platform-cop-frontend
+
 # Income and Asset Statement
 src/applications/income-and-asset-statement @department-of-veterans-affairs/pension-and-burials @department-of-veterans-affairs/va-platform-cop-frontend
 
@@ -274,6 +278,4 @@ src/applications/accreditation @department-of-veterans-affairs/va-platform-cop-f
 src/applications/benefit-eligibility-questionnaire @department-of-veterans-affairs/va-platform-cop-frontend
 src/applications/ivc-champv @department-of-veterans-affairs/va-platform-cop-frontend
 src/applications/office-directory @department-of-veterans-affairs/va-platform-cop-frontend
-src/applications/representative-appoint @department-of-veterans-affairs/va-platform-cop-frontend
-src/applications/representative-search @department-of-veterans-affairs/va-platform-cop-frontend
 src/applications/travel-pay @department-of-veterans-affairs/va-platform-cop-frontend
