--- a/src/platform/polyfills/package.json
+++ b/src/platform/polyfills/package.json
@@ -16,6 +16,7 @@
     "@formatjs/intl-datetimeformat": "^4.2.3",
     "@formatjs/intl-getcanonicallocales": "^1.7.3",
     "@formatjs/intl-locale": "^2.4.37",
+    "@types/node": "^22.9.1",
     "classlist-polyfill": "^1.2.0",
     "downloadjs": "^1.4.7",
     "element-remove": "^1.0.4",
