--- a/package.json
+++ b/package.json
@@ -397,7 +397,8 @@
       "src/platform/mhv",
       "src/applications/check-in",
       "src/applications/vaos",
-      "src/applications/claims-status"
+      "src/applications/claims-status",
+      "src/applications/accredited-representative-portal"
     ],
     "nohoist": [
       "**/applications-check-in/i18next-resources-to-backend",
