Try to get build to work

--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
   "nyc": {
     "report-dir": "./coverage",
     "temp-directory": "../.nyc_output",
-    "sourceMap": true,
+    "sourceMap": false,
     "instrument": false,
     "include": [
       "src/**"
