--- a/src/applications/discover-your-benefits/manifest.json
+++ b/src/applications/discover-your-benefits/manifest.json
@@ -1,7 +1,7 @@
 {
   "appName": "Discover Your Benefits",
   "entryFile": "./app-entry.jsx",
-  "entryName": "benefit-eligibility-questionnaire",
-  "rootUrl": "/benefit-eligibility-questionnaire",
+  "entryName": "discover-your-benefits",
+  "rootUrl": "/discover-your-benefits",
   "productId": "87f2c91f-46c3-4461-8890-3636130af4ab"
 }
