--- a/src/applications/claims-status/package.json
+++ b/src/applications/claims-status/package.json
@@ -6,7 +6,8 @@
     "demo": "echo DEMOING $npm_package_name v $npm_package_version with WORKSPACES"
   },
   "dependencies": {
-    "@department-of-veterans-affairs/component-library": "43.0.2"
+    "@department-of-veterans-affairs/component-library": "43.0.2",
+    "@department-of-veterans-affairs/css-library": "0.15.0"
   },
   "peerDependencies": {
     "react": "*",
