--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
   },
   "nyc": {
     "report-dir": "./coverage",
-    "temp-directory": "../.nyc_output",
+    "temp-directory": ".nyc_output",
     "sourceMap": false,
     "instrument": false,
     "include": [
