back to 13.15.0 and update cache setting

--- a/.github/workflows/e2e-injection-test.yml
+++ b/.github/workflows/e2e-injection-test.yml
@@ -33,7 +33,9 @@ jobs:
         uses: ./.github/workflows/install
         with:
           key: ${{ hashFiles('yarn.lock') }}
-          yarn_cache_folder: .cache/yarn
+          yarn_cache_folder: 
+            .cache/yarn 
+            /github/home/.cache/Cypress
           path: |
             .cache/yarn
             /github/home/.cache/Cypress
