try redirecting log

--- a/.github/workflows/e2e-coverage.yml
+++ b/.github/workflows/e2e-coverage.yml
@@ -404,7 +404,7 @@ jobs:
 
       - name: List directories
         run: |
-          cd .nyc_output
+          cd config
           ls -a
 
       - name: Run Cypress tests
