upgrade route setup

--- a/package.json
+++ b/package.json
@@ -397,9 +397,13 @@
       "src/platform/mhv",
       "src/applications/check-in",
       "src/applications/vaos",
-      "src/applications/claims-status"
+      "src/applications/claims-status",
+      "src/applications/accredited-representative-portal/accreditation/21a",
+      "src/applications/accredited-representative-portal"
+      
     ],
     "nohoist": [
+      "**/applications-accredited-representative-portal/react-router-dom",
       "**/applications-check-in/i18next-resources-to-backend",
       "**/applications-check-in/react-i18next",
       "**/applications-claims-status/@department-of-veterans-affairs/component-library",
