--- a/package.json
+++ b/package.json
@@ -228,6 +228,7 @@
     "postcss": "^8.4.4",
     "postcss-loader": "^6.2.1",
     "prettier": "^1.14.3",
+    "proxyquire": "^2.1.3",
     "sass-lint": "^1.13.1",
     "sass-loader": "^8.0.2",
     "semver": "^7.3.5",
@@ -261,9 +262,9 @@
     "@babel/runtime": "^7.15.4",
     "@datadog/browser-logs": "^5.8.0",
     "@datadog/browser-rum": "^4.49.0",
-    "@department-of-veterans-affairs/formation": "^12.0.0",
     "@department-of-veterans-affairs/component-library": "^48.0.2",
     "@department-of-veterans-affairs/css-library": "^0.15.0",
+    "@department-of-veterans-affairs/formation": "^12.0.0",
     "@department-of-veterans-affairs/react-jsonschema-form": "^1.2.5",
     "@department-of-veterans-affairs/va-forms-system-core": "1.6.1",
     "@department-of-veterans-affairs/vagov-platform": "^0.0.1",
@@ -440,7 +441,6 @@
       "**/platform-testing/sentry-testkit",
       "**/platform-testing/table",
       "**/platform-testing/winston"
-
     ]
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
