--- a/package.json
+++ b/package.json
@@ -279,6 +279,7 @@
     "date-fns-tz": "^2.0.0",
     "dompurify": "^3.1.6",
     "dotenv": "^10.0.0",
+    "downloadjs": "^1.4.7",
     "downshift": "^1.22.5",
     "express": "^4.17.1",
     "fast-levenshtein": "^2.0.6",
