--- a/package.json
+++ b/package.json
@@ -261,9 +261,8 @@
     "@babel/runtime": "^7.15.4",
     "@datadog/browser-logs": "^5.8.0",
     "@datadog/browser-rum": "^4.49.0",
-    "@department-of-veterans-affairs/component-library": "^48.1.0",
-    "@department-of-veterans-affairs/css-library": "^0.15.0",
-    "@department-of-veterans-affairs/formation": "^12.0.0",
+    "@department-of-veterans-affairs/component-library": "^48.1.1",
+    "@department-of-veterans-affairs/css-library": "^0.16.0",
     "@department-of-veterans-affairs/react-jsonschema-form": "^1.2.5",
     "@department-of-veterans-affairs/va-forms-system-core": "1.6.1",
     "@department-of-veterans-affairs/vagov-platform": "^0.0.1",
@@ -305,6 +304,7 @@
     "octokit": "^2.1.0",
     "octokit-plugin-create-pull-request": "^3.11.0",
     "prop-types": "^15.6.1",
+    "querystring": "^0.2.1",
     "react": "^17.0.2",
     "react-device-detect": "^2.2.3",
     "react-dom": "^17.0.2",
