Update app name: VA Online Scheduling to Appointments (#37629)

--- a/src/applications/manifest-catalog.json
+++ b/src/applications/manifest-catalog.json
@@ -749,7 +749,7 @@
     },
     {
       "directoryPath": "src/applications/vaos",
-      "appName": "VA Online Scheduling",
+      "appName": "Appointments",
       "entryName": "vaos",
       "rootUrl": "/my-health/appointments"
     },
