--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -186,7 +186,6 @@ src/applications/post-911-gib-status @department-of-veterans-affairs/govcio-vfep
 
 src/applications/coronavirus-research @department-of-veterans-affairs/va-cto-health-products @department-of-veterans-affairs/va-platform-cop-frontend
 src/applications/coronavirus-screener @department-of-veterans-affairs/va-cto-health-products @department-of-veterans-affairs/va-platform-cop-frontend
-src/applications/health-care-supply-reordering @department-of-veterans-affairs/va-cto-health-products @department-of-veterans-affairs/va-platform-cop-frontend
 
 # My Education Benefits Team
 
@@ -201,15 +200,16 @@ src/applications/survivor-dependent-education-benefit @department-of-veterans-af
 
 # My HealtheVet on VA.gov
 
-src/applications/mhv @department-of-veterans-affairs/vfs-mhv-medical-records @department-of-veterans-affairs/vfs-mhv-medications @department-of-veterans-affairs/vfs-mhv-secure-messaging @department-of-veterans-affairs/vfs-mhv-integration @department-of-veterans-affairs/va-cto-health-products @department-of-veterans-affairs/va-platform-cop-frontend
-src/applications/mhv-medical-records @department-of-veterans-affairs/vfs-mhv-medical-records @department-of-veterans-affairs/va-platform-cop-frontend
-src/applications/mhv-medications @department-of-veterans-affairs/vfs-mhv-medications @department-of-veterans-affairs/va-platform-cop-frontend
-src/applications/mhv-secure-messaging @department-of-veterans-affairs/vfs-mhv-secure-messaging @department-of-veterans-affairs/va-platform-cop-frontend
+src/applications/mhv @department-of-veterans-affairs/vfs-mhv-integration @department-of-veterans-affairs/va-cto-health-products @department-of-veterans-affairs/va-platform-cop-frontend
+src/applications/mhv-medical-records @department-of-veterans-affairs/vfs-mhv-integration @department-of-veterans-affairs/va-platform-cop-frontend
+src/applications/mhv-medications @department-of-veterans-affairs/vfs-mhv-integration @department-of-veterans-affairs/va-platform-cop-frontend
+src/applications/mhv-secure-messaging @department-of-veterans-affairs/vfs-mhv-integration @department-of-veterans-affairs/va-platform-cop-frontend
 src/applications/mhv-landing-page @department-of-veterans-affairs/vfs-mhv-integration @department-of-veterans-affairs/va-platform-cop-frontend
+src/applications/mhv-supply-reordering @department-of-veterans-affairs/vfs-mhv-integration @department-of-veterans-affairs/va-cto-health-products @department-of-veterans-affairs/va-platform-cop-frontend
+src/applications/health-care-supply-reordering @department-of-veterans-affairs/vfs-mhv-integration @department-of-veterans-affairs/va-cto-health-products @department-of-veterans-affairs/va-platform-cop-frontend
 src/applications/avs @department-of-veterans-affairs/after-visit-summary @department-of-veterans-affairs/va-platform-cop-frontend
 src/applications/static-pages/mhv-signin-cta @department-of-veterans-affairs/vfs-mhv-integration @department-of-veterans-affairs/va-platform-cop-frontend
 src/platform/mhv @department-of-veterans-affairs/vfs-mhv-integration @department-of-veterans-affairs/va-platform-cop-frontend
-src/platform/mhv/api/mocks @department-of-veterans-affairs/vfs-mhv-integration @department-of-veterans-affairs/vfs-mhv-secure-messaging @department-of-veterans-affairs/vfs-mhv-medical-records @department-of-veterans-affairs/vfs-mhv-medications @department-of-veterans-affairs/va-platform-cop-frontend
 
 # Profile
 
