--- a/package.json
+++ b/package.json
@@ -289,7 +289,7 @@
     "fine-uploader": "^5.16.2",
     "formik": "^2.2.9",
     "foundation-sites": "^5.5.3",
-    "history": "3",
+    "history": "^5.3.0",
     "history-v4": "npm:history@4.9.0",
     "http-cache-semantics": "4.1.1",
     "https-browserify": "^1.0.0",
@@ -322,8 +322,8 @@
     "react-linkify": "^1.0.0-alpha",
     "react-meta-tags": "^1.0.1",
     "react-redux": "^7.2.6",
-    "react-router": "3",
-    "react-router-dom": "^5.3.0",
+    "react-router": "^5.3.4",
+    "react-router-dom": "^5.3.4",
     "react-router-dom-v5-compat": "^6.22.3",
     "react-router-last-location": "^2.0.1",
     "react-tabs": "^3.2.3",
