--- a/.github/workflows/continuous-deploy-production.yml
+++ b/.github/workflows/continuous-deploy-production.yml
@@ -13,6 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     env: 
       VETS_WEBSITE_CHANNEL_ID: C02V265VCGH #status-vets-website
+      SLACK_CHANNEL_ID: ${{ github.event.client_payload.slackChannel }}
 
     steps:
       - name: Notify application team in Slack
@@ -35,7 +36,7 @@ jobs:
                 }
               ]
             }
-          channel_id: ${{ env.VETS_WEBSITE_CHANNEL_ID }}
+          channel_id: ${{ env.SLACK_CHANNEL_ID != '' && env.SLACK_CHANNEL_ID || env.VETS_WEBSITE_CHANNEL_ID }}
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
@@ -113,6 +114,7 @@ jobs:
       ALERT_TEAMS: true # Alerts teams for single/grouped app builds when set to true
       DEVOPS_CHANNEL_ID: C37M86Y8G #devops-deploys
       VETS_WEBSITE_CHANNEL_ID: C02V265VCGH #status-vets-website
+      SLACK_CHANNEL_ID: ${{ github.event.client_payload.slackChannel }}
 
     steps:
       - name: Checkout
@@ -144,7 +146,7 @@ jobs:
         continue-on-error: true
         with:
           payload: '{"attachments": [{"color": "#FF0800","blocks": [{"type": "section","text": {"type": "mrkdwn","text": "${{steps.get-changed-apps.outputs.slack_groups}} CI for your application failed on the `main` branch in `vets-website`: <https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}|${{github.run_id}}>\n For help troubleshooting, see the <https://depo-platform-documentation.scrollhelp.site/developer-docs/Handling-failed-single%2Fgrouped-application-pipelines.2066645150.html|documentation> on failed workflow runs."}}]}]}'
-          channel_id: ${{ env.VETS_WEBSITE_CHANNEL_ID }}
+          channel_id: ${{ env.SLACK_CHANNEL_ID != '' && env.SLACK_CHANNEL_ID || env.VETS_WEBSITE_CHANNEL_ID }}
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
@@ -154,6 +156,25 @@ jobs:
         continue-on-error: true
         with:
           payload: '{"attachments": [{"color": "#FF0800","blocks": [{"type": "section","text": {"type": "mrkdwn","text": "`main` branch CI in `vets-website` failed: <https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}|${{github.run_id}}>"}}]}]}'
-          channel_id: ${{ env.VETS_WEBSITE_CHANNEL_ID }}
+          channel_id: ${{ env.SLACK_CHANNEL_ID != '' && env.SLACK_CHANNEL_ID || env.VETS_WEBSITE_CHANNEL_ID }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+  notify-success:
+    name: Notify Success
+    runs-on: ubuntu-latest
+    if: ${{ success() && github.ref == 'refs/heads/main' }}
+    needs: [deploy]
+    env:
+      VETS_WEBSITE_CHANNEL_ID: C02V265VCGH #status-vets-website
+      SLACK_CHANNEL_ID: ${{ github.event.client_payload.slackChannel }}
+
+    steps:
+      - name: Notify Slack
+        uses: department-of-veterans-affairs/platform-release-tools-actions/slack-notify@main
+        continue-on-error: true
+        with:
+          payload: '{"attachments": [{"color": "#07711E", "blocks": [{"type": "section", "text": {"type": "mrkdwn", "text": "Successfully deployed ${{ github.event.client_payload.entry_app }} to production: <https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}|View run>"}}]}]}'
+          channel_id: ${{ env.SLACK_CHANNEL_ID != '' && env.SLACK_CHANNEL_ID || env.VETS_WEBSITE_CHANNEL_ID }}
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
