CD-test: route deployments

--- a/config/changed-apps-build.json
+++ b/config/changed-apps-build.json
@@ -333,6 +333,10 @@
     {
       "rootFolder": "yellow-ribbon",
       "slackGroup": "<@U022GNYPJ1L>"
+    },
+    {
+      "rootFolder": "cd-playground",
+      "slackChannel": "C045LCF8WU8"
     }
   ]
 }
