--- a/src/applications/cd-playground/manifest.json
+++ b/src/applications/cd-playground/manifest.json
@@ -1,1 +1,5 @@
-{ "entryName": "cd-playground", "rootUrl": "/cd-playground", "entryFile": "./index.jsx" }
+{ 
+    "entryName": "cd-playground", 
+    "rootUrl": "/cd-playground", 
+    "entryFile": "./index.jsx" 
+}
