--- a/config/changed-apps-build.json
+++ b/config/changed-apps-build.json
@@ -284,8 +284,7 @@
     },
     {
       "rootFolder": "third-party-app-directory",
-      "slackGroup": "<@U022GNYPJ1L>",
-      "slackChannel": "C06JM7UUHE3"
+      "slackGroup": "<@U022GNYPJ1L>"
     },
     {
       "rootFolder": "survivor-dependent-education-benefit",
