CD test: use mock-sip-form with manifest for Slack channel routing test

--- a/config/changed-apps-build.json
+++ b/config/changed-apps-build.json
@@ -199,7 +199,8 @@
     },
     {
       "rootFolder": "mock-sip-form",
-      "slackGroup": "<@U022GNYPJ1L>"
+      "slackGroup": "<@U022GNYPJ1L>",
+      "slackChannel": "C06JM7UUHE3"
     },
     {
       "rootFolder": "my-education-benefits",
